# Portfolio_projects

deep_research_agents/: .gitignore  Dockerfile  README.md  api.py  app.py  config.py  database.py  docker-compose.yml  graph.py  pyproject.toml  requirements.txt  tools.py
hybrid-rag-system/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ui.py
hybrid-rag-system/.claude/: settings.local.json
hybrid-rag-system/app/: pipeline.py
hybrid-rag-system/app/api/: routes.py
hybrid-rag-system/app/core/: __init__.py  config.py  logger.py  schemas.py
hybrid-rag-system/app/generation/: __init__.py  generator.py
hybrid-rag-system/app/indexing/: __init__.py  dense_index.py  sparse_index.py
hybrid-rag-system/app/ingestion/: __init__.py  ingest.py
hybrid-rag-system/app/reranking/: __init__.py  reranker.py
hybrid-rag-system/app/retrieval/: __init__.py  hybrid_retriever.py
hybrid-rag-system/data/: .gitkeep
hybrid-rag-system/scripts/: crawl_stripe_docs.py  evaluate.py  test_queries.py
